2008-02-14  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Remove applets/battery/data/, argh.

2008-02-14  Ross Burton  <ross@openedhand.com>

	* applets/battery/data/:
	* applets/battery/battery.c:
	Don't use private icons, use the icon theme.

2008-02-13  Ross Burton  <ross@openedhand.com>

	* applets/showdesktop/Makefile.am:
	* applets/windowselector/Makefile.am:
	Don't try and install files I just deleted.

2008-02-13  Ross Burton  <ross@openedhand.com>

	* applets/showdesktop/showdesktop.c:
	Use "user-desktop" stock icon instead of custom icons.
	
	* applets/showdesktop/mb-applet-showdesktop-active.png:
	* applets/showdesktop/mb-applet-showdesktop.png:
	Delete.

2008-02-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Use icons from the icon theme.
	
	* applets/windowselector/mb-applet-windowselector.png:
	Delete.

2008-02-12  Ross Burton  <ross@openedhand.com>

	* matchbox-panel/mb-panel-scaling-image.c:
	Reload the icon on size allocation.

2008-02-08  Ross Burton  <ross@openedhand.com>

	* applets/notify/mb-notification.[ch]:
	Subclass event box and emit a signal when clicked.
	
	* applets/notify/notify-store.[ch]:
	Add a reason argument to the public close method.
	
	* applets/notify/applet.c:
	Tie all of that together, so clicking on notifications removes
	them.

2008-02-07  Ross Burton  <ross@openedhand.com>

	* applets/systray/Makefile.am:
	* applets/systray/systray.c:
	Don't bother using libnotify for the balloon messages, nothing
	uses them.

2008-02-06  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Look for DBus

	* applets/Makefile:
	* applets/notify/*:
	Basic notification-daemon implementation as an applet.  Needs
	work, but its usable.

2008-02-04  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	* applets/Makefile.am:
	* applets/brightness/*:
	Add a brightness applet, thanks Manuel Teira.

2008-02-01  Thomas Wood  <thomas@openedhand.com>
